--- a/jquery.html
+++ b/jquery.html
@@ -10,7 +10,7 @@
 
 </head>
 <body>
-    <h1>Jquery Assignment by Avishkar Tech Solutions</h1>
+    <h1>Let's do some Animations using Jquery</h1>
     <h1>Animation Box</h1>
     <h3>Create a clone of this site with following functionalities...</h3>
     <ul>
